# light_config

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  lint.yml
docs/: setup-ubuntu-22.04.md
examples/: CMakeLists.txt  app_config.cpp  app_config.hpp  example.cpp  network.cpp  network.hpp  network_config.cpp  network_config.hpp  sample_config.csv  valid_config.json  valid_config.yaml
include/light_config/: json_loader.hpp  light_config.hpp  load_result.hpp  result.hpp  yaml_loader.hpp
include/light_config/detail/: audit_json.hpp  audit_yaml.hpp  file_utils.hpp
scripts/: _gen_test_helpers.py  gen_config.py  invalid_config.json  invalid_config.yaml  pre-commit  sample_config.csv  test_cpp_compile.py  test_edge_probes.py  test_gen_config.py  test_metadata.py  test_provenance.py  test_provenance_build.py  test_stamp_emit.py  valid_config.json  valid_config.yaml
scripts/_gen_config/: __init__.py  __main__.py  codegen.py  config.py  cpp_gen.py  exceptions.py  provenance.py  samples.py  schema.py  types.py
tests/: CMakeLists.txt  test_basic.cpp  test_edge_probes.cpp
tests/edge_probes/: big_enum.csv  conflicting_hpp_per_group.csv  cycle.csv  deep_nest_5level.csv  double_extremes.csv  dup_enumerator.csv  empty_optional_no_default.csv  enum_name_collide_cross_file.csv  enum_neg_auto_cursor.csv  enum_over_int32.csv  group_diff_hpp.csv  int64_extremes.csv  optional_vector_with_range.csv  signed_enum.csv  special_char_default.csv  string_special_default.csv  two_enums_same_name.csv  two_roots.csv
